/*
* Protos for common message types.
*/

syntax = "proto3";
package steward.v4;

option go_package = "/steward_proto";

/*
* Exchange selector
*/
enum Exchange {
    EXCHANGE_UNSPECIFIED = 0;
    // Represents Uniswap V2
    EXCHANGE_UNIV2 = 1;
    // Represents Uniswap V3
    EXCHANGE_UNIV3 = 2;
}

/*
* Represents swap parameters for UniswapV2
*/
message UniV2SwapParams {
    // Array of addresses dictating what swap path to follow
    repeated string path = 1;
    // Amount of the first asset in the path to swap
    string amount = 2;
    // The minimum amount of the last asset in the path to receive
    string amount_out_min = 3;
}

/*
* Represents swap parameters for UniswapV3
*/
message UniV3SwapParams {
    // Array of addresses dictating what swap path to follow
    repeated string path = 1;
    // Array of pool fees dictating what swap pools to use
    repeated uint32 pool_fees = 2;
    // Amount of the first asset in the path to swap
    string amount = 3;
    // The minimum amount of the last asset in the path to receive
    string amount_out_min = 4;
}

/*
* Represents swap parameters for an exchange
*/
message SwapParams {
    oneof params {
        // Params for a Uniswap V2 swap
        UniV2SwapParams univ2_params = 1;
        // Params for a Uniswap V3 swap
        UniV3SwapParams univ3_params = 2;
    }
}


/*
* Represents oracle swap parameters for UniswapV2
*/
message UniV2OracleSwapParams {
    // Array of addresses dictating what swap path to follow
    repeated string path = 1;
}

/*
* Represents oracle swap parameters for UniswapV3
*/
message UniV3OracleSwapParams {
    // Array of addresses dictating what swap path to follow
    repeated string path = 1;
    // Array of pool fees dictating what swap pools to use
    repeated uint32 pool_fees = 2;
}

/*
* Represents swap params for BaseAdaptor.oracleSwap()
*/
message OracleSwapParams {
    oneof params {
        UniV2OracleSwapParams univ2_params = 1;
        UniV3OracleSwapParams univ3_params = 2;
    }
}

/*
* Represents parameters for a Morpho Blue market
*/
message MarketParams {
    // The address of the loan token
    string loan_token = 1;

    // The address of the collateral token
    string collateral_token = 2;

    // The address of the oracle
    string oracle = 3;

    // The address of the interest rate model
    string irm = 4;

    // The loan-to-value ratio
    string lltv = 5;
}
